infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: #the ingress controller we downloaded is looking for this guy
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    #ingress assumes you can host many different domains
    #we need to trick nginx to think we are within a cluster
    #so we redirect post.com to localhost
    #do in /etc/hosts
    - host: ticketing.dev
      http:
        paths:
          #ingress cannot differentiate between GET and POST
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
